apps/slopty-ptyd/tests/snapshots/custody__golden__error_os.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
24 00 00 00 05 00 03 20 6f 70 65 6e 70 74 79 3a
20 6e 6f 20 73 70 61 63 65 20 6c 65 66 74 20 6f
6e 20 64 65 76 69 63 65
