apps/slopty-ptyd/tests/snapshots/custody__golden__event_attached.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
34 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 03 1b 5b 48 04 6f 6b 0d 0a 07
78 28 10 22 80 ec c7 e4 98 33 0d 78 74 65 72 6d
2d 67 68 6f 73 74 74 79
