apps/slopty-ptyd/tests/snapshots/custody__golden__event_sessions.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
2d 00 00 00 03 01 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 92 21 0c 2f 64 65 76 2f 74
74 79 73 30 30 33 78 28 10 22 01 01 11 80 08 80
10
