apps/slopty-ptyd/tests/snapshots/custody__golden__event_spawned.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
14 00 00 00 00 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 92 21
