apps/slopty-ptyd/tests/snapshots/custody__golden__request_checkpoint.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
1c 00 00 00 03 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 09 1b 5b 32 4a 1b 5b 48 24 20
