apps/slopty-ptyd/tests/snapshots/custody__golden__request_output.snap
---
source: apps/slopty-ptyd/tests/custody.rs
expression: hex(&bytes)
---
19 00 00 00 02 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 06 24 20 6c 73 0d 0a
